adapt for java 13