@@ -12,11 +12,10 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @RunWith(SpringRunner.class)
@@ -34,16 +33,16 @@ public class MovieControllerTest {
 
     @Test
     public void testLatest() throws Exception {
-        Mockito.when(service.latest()).thenReturn(Arrays.asList(new Movie("Black Hawk Down")));
+        Mockito.when(service.latest()).thenReturn(List.of(new Movie("Black Hawk Down")));
         this.mockMvc.perform(get("/api/movie/latest"))
                 .andExpect(status().isOk())
-                .andExpect(header().string("Content-Type", "application/json;charset=UTF-8"))
+                .andExpect(header().string("Content-Type", "application/json"))
                 .andExpect(content().string(containsString("Black Hawk Down")));
     }
 
     @Test
     public void testDummy() throws Exception {
-        Mockito.when(service.latest()).thenReturn(Arrays.asList(new Movie("Black Hawk Down")));
+        Mockito.when(service.latest()).thenReturn(List.of(new Movie("Black Hawk Down")));
         this.mockMvc.perform(get("/api/movie/foo"))
                 .andExpect(status().isNotFound());
     }
